...
      >
        <BottomSheetView className="px-4">
          <ControlledTextInput
            control={form.control}
            autoFocus
            name="title"
            label="Título"
            placeholder="Digite o título da tag"
            testID="tag-title-input"
          />
        </BottomSheetView>
      </BottomSheet>
    </Portal>
...
