appId: com.carlos3g.echoes
---
- runFlow:
    file: ../setup-app.yaml

- runScript:
    file: ../scripts/env.js

# Sign in first
- tapOn:
    id: 'signin-email-input'
- inputText: ${output.EMAIL}
- tapOn:
    id: 'signin-password-input'
- inputText: ${output.PASSWORD}
- hideKeyboard
- tapOn:
    id: 'signin-button'

# Navigate to change password screen
- tapOn:
    id: 'settings-tab-button'
- tapOn:
    id: 'go-to-change-password-button'

# Verify initial state
- assertVisible:
    id: 'change-password-button'
- assertTrue: 'change-password-button.enabled == false'

# Test with wrong current password
- tapOn:
    id: 'current-password-input'
- inputText: ${output.INVALID_PASSWORD}
- tapOn:
    id: 'new-password-input'
- inputText: ${output.NEW_PASSWORD}
- tapOn:
    id: 'new-password-confirmation-input'
- inputText: ${output.NEW_PASSWORD}
- hideKeyboard
- tapOn:
    id: 'change-password-button'
- assertVisible: 'Não foi possível alterar a senha!'
- assertVisible: 'Talvez você digitou a senha atual incorretamente?'

# Test password mismatch validation
- tapOn:
    id: 'current-password-input'
- eraseText: 100
- inputText: ${output.CURRENT_PASSWORD}
- tapOn:
    id: 'new-password-input'
- eraseText: 100
- inputText: ${output.NEW_PASSWORD}
- tapOn:
    id: 'new-password-confirmation-input'
- eraseText: 100
- inputText: ${output.CURRENT_PASSWORD}
- hideKeyboard
- assertVisible: 'As senhas inseridas devem ser iguais'

# Test successful password change
- tapOn:
    id: 'current-password-input'
- eraseText: 100
- inputText: ${output.CURRENT_PASSWORD}
- tapOn:
    id: 'new-password-input'
- eraseText: 100
- inputText: ${output.NEW_PASSWORD}
- tapOn:
    id: 'new-password-confirmation-input'
- eraseText: 100
- inputText: ${output.NEW_PASSWORD}
- hideKeyboard
- tapOn:
    id: 'change-password-button'
- assertVisible: 'Senha alterada com sucesso!'

# Revert password back to original
- tapOn:
    id: 'current-password-input'
- eraseText: 100
- inputText: ${output.NEW_PASSWORD}
- tapOn:
    id: 'new-password-input'
- eraseText: 100
- inputText: ${output.CURRENT_PASSWORD}
- tapOn:
    id: 'new-password-confirmation-input'
- eraseText: 100
- inputText: ${output.CURRENT_PASSWORD}
- hideKeyboard
- tapOn:
    id: 'change-password-button'
- assertVisible: 'Senha alterada com sucesso!'
