appId: com.carlos3g.echoes
---
- runFlow:
    file: ../setup-app.yaml

- runScript:
    file: ../scripts/env.js

# Sign in first
- tapOn:
    id: 'signin-email-input'
- inputText: ${output.EMAIL}
- tapOn:
    id: 'signin-password-input'
- inputText: ${output.PASSWORD}
- hideKeyboard
- tapOn:
    id: 'signin-button'

# Test favorite toggle
- tapOn:
    id: 'toggle-favorite-button'
    index: 0
- assertVisible: '1'
- tapOn:
    id: 'toggle-favorite-button'
    index: 0
- assertVisible: '0'

# Test tag button (feature not available yet)
- tapOn:
    id: 'toggle-tag-button'
    index: 0
- assertVisible: 'Essa funcionalidade ainda não está disponível'
- assertVisible: 'Estamos trabalhando para trazer essa funcionalidade o mais breve possível'

# Test scrolling
- swipe:
    direction: UP
    duration: 500
- swipe:
    direction: DOWN
    duration: 500
- swipe:
    direction: DOWN
    duration: 500

- swipe:
    direction: UP
    duration: 1000
